# Woh-wala-trip

./: .env.example  .env.local.example  .gitignore  .prettierignore  CLAUDE.md  README.md  TESTING.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
.planning/: INFLUENCER_OUTREACH.md  LAUNCH_CHECKLIST.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  YC_APPLICATION.md  YC_DEMO_SCRIPT.md  config.json
.storybook/: main.ts  preview.ts
ai-worker/: Dockerfile  pyproject.toml  pytest.ini  render.yaml  run_tests.sh
ai-worker/.deepeval/: .deepeval_telemetry.txt
ai-worker/src/: auth.py  clients.py  config.py  embeddings.py  image_gen.py  main.py  nostalgia.py  slambook.py  thumbnails.py
ai-worker/src/lore/: orchestrator.py  prompts.py  validators.py
ai-worker/src/wwt_ai_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai-worker/tests/: conftest.py  run_deterministic.py  test_anniversary.py  test_archetypes.py  test_battle.py  test_chaos_calibration.py  test_image_gen_guards.py  test_image_gen_quality.py  test_lore_quality.py  test_pipeline_integration.py  test_safety.py  test_schema.py  test_signals.py
ai-worker/tests/fixtures/: bad_lore.json  golden_lore.json  sample_signals.json
docs/: AI_PIPELINES.md  ARCHITECTURE.md  DECISION_LOG.md  FEATURE_MATRIX.md  GROWTH_LOOPS.md  KNOWLEDGE_GRAPH.md  PRD.md  PRODUCT_PHILOSOPHY.md  RETENTION_MODEL.md  SCALING_RISKS.md  SLAMBOOK_VISION.md  STABILIZATION.md  SYSTEM_MAP.md  TECH_DEBT.md  (+5 more)
(+270 files in other folders)
