[project]
name = "wwt-ai-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.40.0",
    "supabase>=2.8.0",
    "pillow>=10.4.0",
    "pyheif>=0.7.1",
    "pydantic>=2.8.0",
    "tenacity>=8.5.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.4.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "numpy>=1.26.0",
]
